Started writing tests for kindleSales. Modified KindleSalesso that a shine animation makes it visible it's clickable. Fixed an issue where Kindle Details made the app crash as they weren't properly conditionally called. Modified changeDateFormat so that it can be used to only return months. Kindle Sales first pass is done. Added date at Inventario total inicial for specific books. Added a line for new impressions with the date in authInventories. Fixed an issue where adding a new impression would add them to the Mercado Libre instead of Plataforma Was.

--- a/frontend/src/ShowInventories.scss
+++ b/frontend/src/ShowInventories.scss
@@ -52,3 +52,17 @@
   border-radius: 15px;
   color: white
 }
+
+.author-inventory-date {
+  margin: 0;
+  font-size: 14px;
+  font-style: italic;
+  color: grey;
+  margin-left: 0.5rem;
+}
+
+.author-inventory-impressions {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem;
+}
